--- a/bloc-jams2/index.html
+++ b/bloc-jams2/index.html
@@ -42,5 +42,6 @@
                 <p>Listen to your music on the go. This streaming service is available on all mobile platforms. aschachasdc</p>
             </div>
         </section>
+        <script src="scripts/landing.js"></script>
     </body>
 </html>
