JavaScript:DOM: Collection View

--- a/bloc-jams2/index.html
+++ b/bloc-jams2/index.html
@@ -42,7 +42,9 @@
                 <p>Listen to your music on the go. This streaming service is available on all mobile platforms. aschachasdc</p>
             </div>
         </section>
+        <script src="scripts/collection.js"></script>
         <script src="scripts/landing.js"></script>
         <script src="scripts/utilities.js"></script>
+    
     </body>
 </html>
